# ChessMaker

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  azure_config.sh  dev-requirements.txt  fly.toml  index.html  mkdocs.yml  pydoc-markdown.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  master_chessmaker.yml
api-reference/board/: index.html
api-reference/events/: index.html
api-reference/game/: index.html
api-reference/move-option/: index.html
api-reference/piece/: index.html
api-reference/piece-utils/: index.html
api-reference/player/: index.html
api-reference/position/: index.html
api-reference/rule/: index.html
api-reference/square/: index.html
chessmaker/: __init__.py
chessmaker/chess/: __init__.py  game_factory.py  piece_utils.py
chessmaker/chess/base/: __init__.py  board.py  game.py  move_option.py  piece.py  player.py  rule.py  square.py
chessmaker/chess/pieces/: __init__.py  bishop.py  duck.py  king.py  knight.py  pawn.py  piece_utils.py  queen.py  rook.py
chessmaker/chess/results/: __init__.py  capture_all_pieces_to_win.py  checkmate.py  double_check_to_win.py  no_captures_or_pawn_moves.py  no_kings.py  repetition.py  simple_result.py  stalemate.py  standard_result.py
chessmaker/chess/rules/: __init__.py  beta_decay.py  duck_chess.py  force_en_passant.py  forced_en_passant.py  il_vaticano.py  king_cant_move_to_c2.py  knight_boosting.py  la_bastarda.py  omnipotent_f6_pawn.py  siberian_swipe.py
chessmaker/clients/: __init__.py  pywebio_ui.py
chessmaker/events/: __init__.py  event.py  event_priority.py  event_publisher.py
docs/: getting-started.md  index.md  packaged-variants.md
docs/api-reference/: board.md  events.md  game.md  move-option.md  piece-utils.md  piece.md  player.md  position.md  rule.md  square.md
docs/guide/: first-steps.md
docs/guide/concepts/: base-game.md  cloneables.md  events.md
docs/guide/tutorials/: capture-all-pieces-to-win.md  forced-en-passant.md  knook.md  omnipotent-f6-pawn.md  siberian-swipe.md
getting-started/: index.html
guide/concepts/base-game/: index.html
guide/concepts/cloneables/: index.html
guide/first-steps/: index.html
packaged-variants/: index.html
search/: search_index.json
src/: cloneable.py
src/chess/: board_utils.py  game_factory.py
src/chess/base/: board.py  (+6 more)
src/clients/: pywebio_ui.py
src/events/: __init__.py  event_priority.py  event_publisher.py
(+31 files in other folders)
