[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chessmaker", "chessmaker.*"]

[project]
name = "chessmaker"
version = "0.1.0"
description = "An easily extendible chess implementation designed to support any custom rule or feature"
readme = "README.md"
authors = [{ name = "WolfDWyc", email="yoavwolfdw@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Games/Entertainment :: Chess",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["chess"]
dependencies = [
    "pywebio==1.7.1",
    "pywebio-battery==0.4.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "mkdocs-material==9.1.6",
    "pydoc-markdown==4.5.1",
]


[project.urls]
Homepage = "https://github.com/WolfDWyc/ChessMaker"

