[tool.poetry]
name = "chessmaker"
version = "0.4.1"
description = "An easily extendible chess implementation designed to support any custom rule or feature"
readme = "README.md"
authors = ["WolfDWyc <yoavwolfdw@gmail.com>",]
license = "AGPL-3.0-or-later"
classifiers = [
"License :: OSI Approved :: GNU Affero General Public License v3",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Operating System :: OS Independent",
"Development Status :: 3 - Alpha",
"Topic :: Games/Entertainment :: Board Games",
"Topic :: Games/Entertainment :: Turn Based Strategy",
"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["chess"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pywebio = "==1.7.1"
pywebio-battery = "==0.4.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "==9.1.6"
pydoc-markdown = "==4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/WolfDWyc/ChessMaker"